# eos-panel-extension

./: extension.js  meson-postinstall.sh  meson.build  metadata.json.in  stylesheet.scss  utils.js
.tx/: config
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  (+65 more)
schemas/: com.endlessm.panel-extension.gschema.xml  org.gnome.shell.gschema.xml
ui/: appFavorites.js  appIconBar.js  automaticUpdates.js  boxpointer.js  endlessButton.js  hotCorner.js  layout.js  overview.js  panel.js  panelManager.js  panelMenu.js  power.js  powerButton.js  remoteAccess.js  systemMenu.js  userMenu.js  workspaceMonitor.js
